# lightning-template

./: .gitignore
{{cookiecutter.project_name}}/: .codecarbon.config  Dockerfile.mlflow  Dockerfile.trainer  README.md  docker-compose.yaml  environment.yml  main.py  pyproject.toml
{{cookiecutter.project_name}}/config/: baseline.yaml  mnist.yaml
{{cookiecutter.project_name}}/src/callbacks/: codecarbon.py
{{cookiecutter.project_name}}/src/datasets/: __init__.py  medmnist.py  mnist.py
{{cookiecutter.project_name}}/src/models/: __init__.py  default.py
{{cookiecutter.project_name}}/src/utils/: export.py
